# setup.cfg

[metadata]
name = ouisearch
version = 0.0.1
author = Eric Johnfelt
author_email = ejohnfel@hotmail.com
description = A package for looking up IEEE OUI codes, with caching.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ejohnfel/ouisearch
project_urls =
	Bug Tracker = https://github.com/ejohnfel/ouisearch/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packagedir =
	= src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

